[gd_scene load_steps=9 format=3 uid="uid://b0vcr0ijv32eb"]

[ext_resource type="Script" path="res://Scripts/login_screen.gd" id="1_h4g3c"]
[ext_resource type="Texture2D" uid="uid://dew66su4ank75" path="res://assets/10059426.jpg" id="2_v8rxd"]
[ext_resource type="FontFile" uid="uid://bdv3nir2r7fgo" path="res://assets/fonts/iImong.ttf" id="3_i7phl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m61q2"]
texture = ExtResource("2_v8rxd")
modulate_color = Color(0.36, 0.36, 0.36, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5gvls"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lqnbc"]
bg_color = Color(0.862745, 0.862745, 0.862745, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 15
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05t5a"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 15
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xocpd"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 15
shadow_offset = Vector2(0, 3.41)

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h4g3c")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_m61q2")

[node name="LoginContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="LoginContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_i7phl")
theme_override_font_sizes/font_size = 48
text = "SW!TCH - Login"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleSeparator" type="HSeparator" parent="LoginContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="EmailLabel" type="Label" parent="LoginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Email:"

[node name="EmailInput" type="LineEdit" parent="LoginContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Enter your email"

[node name="PasswordLabel" type="Label" parent="LoginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Password:"

[node name="PasswordInput" type="LineEdit" parent="LoginContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Enter your password"
secret = true

[node name="ErrorLabel" type="Label" parent="LoginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ButtonSeparator" type="HSeparator" parent="LoginContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LoginButton" type="Button" parent="LoginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_5gvls")
theme_override_styles/hover = SubResource("StyleBoxFlat_lqnbc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05t5a")
theme_override_styles/normal = SubResource("StyleBoxFlat_xocpd")
text = "Login"

[node name="SignupButton" type="Button" parent="LoginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_5gvls")
theme_override_styles/hover = SubResource("StyleBoxFlat_lqnbc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05t5a")
theme_override_styles/normal = SubResource("StyleBoxFlat_xocpd")
text = "Create Account"

[node name="BackButton" type="Button" parent="LoginContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_5gvls")
theme_override_styles/hover = SubResource("StyleBoxFlat_lqnbc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05t5a")
theme_override_styles/normal = SubResource("StyleBoxFlat_xocpd")
text = "Back to Main Menu"
